# rust_ffi_learning

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  build.rs  notes.md
c/: CMakeLists.txt  Makefile  README.md  notes.md
c/include/: test.h
c/src/: main.c  test.c
src/: ffi.rs  main.rs
